--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -286,7 +286,8 @@
     "- Never reveal answers.\n",
     "- Commend correct answers, notify wrong ones.\n",
     "- Use emojis where fitting.\n",
-    "- Format all responses with valid HTML (e.g., <br>, <p>, <ul>/<ol> with <li>, <b>).\n",
+    "- Use valid HTML for formatting if needed (e.g., <br>, <p>, <ul>/<ol> with <li>, <b>).\n",
+    "- For single paragraph responses, avoid <p>.\n",
     "\n",
     "Keep all your responses sarcastically humorous and verry brief.\n",
     "\"\"\"\n",
@@ -338,7 +339,8 @@
     "- Gib niemals Antworten preis.\n",
     "- Loben bei richtigen Antworten, falsche humorvoll tadeln.\n",
     "- Verwende Emojis, wo es passt.\n",
-    "- Formatiere alle Antworten mit validem HTML (z.B., <br>, <p>, <ul>/<ol> mit <li>, <b>).\n",
+    "- Formatiere bei Bedarf mit validem HTML (z.B., <br>, <p>, <ul>/<ol> mit <li>, <b>).\n",
+    "- Vermeide <p> bei Antworten, die nur einen Absatz haben.\n",
     "\n",
     "Halte all deine Antworten sarkastisch humorvoll und sehr kurz.\n",
     "\"\"\"\n",
