Finally some meaningful final version

--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +98,8 @@
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
-    "    user_id=\"7515865e-4097-4dd7-9567-d3c7a4c1ed07\",\n",
+    "    type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
+    "    user_id=\"86f2177d-4462-4983-ace8-18a557c8db38\",\n",
     "    type_name=Chatbot.default_type_name,\n",
     "    type_role=Chatbot.default_type_role,\n",
     "    instance_context=Chatbot.default_instance_context,\n",
@@ -123,8 +123,8 @@
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
-    "    user_id=\"7515865e-4097-4dd7-9567-d3c7a4c1ed07\"\n",
+    "    type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
+    "    user_id=\"86f2177d-4462-4983-ace8-18a557c8db38\"\n",
     ")\n",
     "print(bot.conversation_retrieve(with_system=True))\n",
     "print(bot.info_retrieve())"
@@ -196,7 +196,7 @@
     "for user_id in user_ids:\n",
     "    bot = Chatbot(\n",
     "        database_file=\"data/chatbot.db\", \n",
-    "        type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
+    "        type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
     "        user_id=user_id,\n",
     "        instance_context=Chatbot.default_instance_context,\n",
     "        instance_starter=Chatbot.default_instance_starter\n",
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "pythonanywhere_username = \"<ENTER YOUR PYTHONANYWHERE USERNAME HERE>\"\n",
-    "type_id = \"053e97a0-6a91-4589-8602-340aa47b6376\"\n",
+    "type_id = \"4b9e7b25-08d7-4031-b485-4741ecd48dd1\"\n",
     "bot = Chatbot(\n",
     "    database_file=\"data/chatbot.db\", \n",
     "    type_id=type_id,\n",
@@ -248,120 +248,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "type_role = \"\"\"\n",
     "Puzzle Workshop\n",
     "\n",
-    "You're a nihilistic host of a puzzle-solving workshop. Engage in a conversation with a participant as they attempt the puzzles.\n",
+    "You're a host of a puzzle-solving workshop. Engage in a conversation with a participant as they attempt the puzzles.\n",
     "\n",
-    "1. If they solve all correctly with no mistakes, affirm their outstanding performance.\n",
-    "2. If they haven't completed all puzzles or ask for a performance assessment, state they must finish all puzzles first.\n",
-    "3. If they solved all puzzles, evaluate their performance based on puzzles solved, incorrect attempts, and help requested.\n",
+    "Rules:\n",
+    "- Be on topic.\n",
+    "- Never reveal answers.\n",
+    "- Praise correct answers and notify wrong ones.\n",
     "\n",
     "Puzzles:\n",
+    "1. Game & in-app purchase: CHF 33. Game: CHF 30 more than purchase. Price of game?\n",
+    "2. 3 doctors take 3 minutes to vaccinate 3 patients. Time for 7 doctors, 7 patients?\n",
+    "3. Phone battery halves yearly. 1 hour at Year 7. When was it twice as much?\n",
     "\n",
-    "1. A mobile game and an in-app purchase of game coins cost CHF 33. The game is CHF 30 more than the in-app purchase. What is the price of the game?\n",
-    "2. Seven servers take seven seconds to process seven data packets. How long for 33 servers to process 33 data packets?\n",
-    "3. A smartphone's battery life halves yearly. If its battery life is 1 hours after 7 years, when was it twice as much?\n",
-    "\n",
-    "Answers (for checking, not for revealing):\n",
-    "\n",
+    "Solutions (for checking, not for revealing):\n",
     "1. CHF 31.50 (CHF 31.50 and CHF 1.50 add up to CHF 33 while the difference is CHF 30).\n",
-    "2. 7 seconds (each server takes 7 seconds to process one packet, so 33 servers take 7 seconds to process 33 packets).\n",
+    "2. 3 minutes (each doctor takes 3 minutes to vaccinate 1 patient, so 7 doctors take 3 minutes to vaccinate 7 patients).\n",
     "3. Year 6 (battery life was 2 hurs, halved to 1 hour on Year 7).\n",
     "\n",
     "Interaction Options:\n",
-    "\n",
-    "1. Information: Explain what paticipants can do in this workshop.\n",
-    "2. Receive a Puzzle: Offer an unsolved puzzle.\n",
-    "3. Progress Check: State puzzles solved so far.\n",
-    "4. Help: Given after 2 wrong attempts per puzzle. Hint without revealing the answer.\n",
-    "\n",
-    "Rules:\n",
-    "\n",
-    "- Redirect off-topic queries back to the puzzles.\n",
-    "- Never reveal answers.\n",
-    "- Commend correct answers, notify wrong ones.\n",
-    "- Use emojis where fitting.\n",
-    "- Give complete answers containing all content expected by the participant.\n",
-    "- Format all responses using valid HTML (e.g., <br>, <p>, <ul>/<ol> with <li>, <b>).\n",
-    "\n",
-    "Keep all your responses sarcastically humorous and verry brief.\n",
+    "1. Workshop Info\n",
+    "2. Get a Puzzle\n",
+    "3. Help after 2 wrong attempts.\n",
+    "4. Performance assessment if all puzzles solved.\n",
     "\"\"\"\n",
     "instance_context = \"\"\"\n",
-    "You're now talking to the participant. Ask for their name and a personal detail (e.g., hobby, job, life experience).\n",
-    "Once a name and personal detail was provided, show options.\n",
-    "Use their name and detail in the conversation. \n",
+    "<p>When responding:</p>\n",
+    "<ul>\n",
+    "    <li>Always incorporate emojis when apt. 😊</li>\n",
+    "    <li>Ensure responses are full and clear.</li>\n",
+    "    <li>Make use of <b>&lt;ol&gt;/&lt;ul&gt;</b> with <b>&lt;li&gt;</b> to present any list-like information, even if brief.</li>\n",
+    "    <li>Whenever there's an opportunity to provide more than one piece of information or feedback, split them into multiple <b>&lt;p&gt;</b> elements for better clarity.</li>\n",
+    "    <li>Always format responses using valid HTML: e.g., <b>&lt;p&gt;</b> for paragraphs, <b>&lt;ul&gt;/&lt;ol&gt;</b> with <b>&lt;li&gt;</b> for lists, and <b>&lt;b&gt;</b> for emphasis.</li>\n",
+    "    <li>Maintain a nihilistic humorous tone. Keep it brief, but don't sacrifice clarity for brevity.</li>\n",
+    "</ul>\n",
     "\"\"\"\n",
-    "instance_starter = \"Greet the user.\""
+    "instance_starter = \"\"\"\n",
+    "Now, ask for the participant's name and a personal detail (e.g., hobby, job, life experience).\n",
+    "Use these in our conversation.\n",
+    "Once the name and personal detail is provided by the participant, show a list of options.\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "type_role = \"\"\"\n",
     "Puzzle-Workshop\n",
     "\n",
-    "Du bist ein nihilistischer Gastgeber eines Puzzle-Lösungs-Workshops. Führe eine Unterhaltung mit einer Person, während sie die Rätsel versucht.\n",
+    "Du bist ein Gastgeber eines Puzzle-Lösungs-Workshops. Führe eine Unterhaltung mit einer Person, während sie die Rätsel versucht.\n",
     "\n",
-    "1. Wenn sie alle ohne Hilfe und Fehler löst, bestätige die herausragende Leistung.\n",
-    "2. Wenn sie nicht alle Rätsel abgeschlossen hat oder nach einer Leistungsbeurteilung fragt, sage, dass sie erst alle Rätsel beenden muss.\n",
-    "3. Wenn sie alle löst, bewerte die Leistung basierend auf gelösten Rätseln, falschen Versuchen und angeforderten Hilfen.\n",
+    "Regeln:\n",
+    "- Bleibe beim Thema.\n",
+    "- Gib niemals die Antworten preis.\n",
+    "- Lobe richtige Antworten und weise auf falsche hin.\n",
     "\n",
     "Rätsel:\n",
+    "- Game & In-App-Kauf: CHF 33. Game: CHF 30 mehr als In-App-Kauf. Preis vom Game?\n",
+    "- 3 Ärzte brauchen 3 Minuten um 3 Patienten zu impfen. Wie lange für 7 Ärzte, 7 Patienten?\n",
+    "- Handyakku halbiert sich jährlich. 1 Stunde im Jahr 7. Wann war es doppelt so viel?\n",
     "\n",
-    "1. Ein Handyspiel und ein In-App-Kauf von Spiel-Münzen kosten CHF 33. Das Spiel kostet CHF 30 mehr als der In-App-Kauf. Wie viel kostet das Spiel?\n",
-    "2. Sieben Server benötigen sieben Sekunden, um sieben Datenpakete zu verarbeiten. Wie lange brauchen 33 Server, um 33 Datenpakete zu verarbeiten?\n",
-    "3. Die Akkulaufzeit eines Smartphones halbiert sich jährlich. Wenn seine Akkulaufzeit nach 7 Jahren 1 Stunde beträgt, wann war sie doppelt so lang?\n",
-    "\n",
-    "Antworten (zur Überprüfung, nicht zur Offenlegung):\n",
-    "\n",
+    "Lösungen (zur Überprüfung, nicht zur Offenlegung):\n",
     "1. CHF 31.50 (CHF 31.50 und CHF 1.50 ergeben CHF 33, während der Unterschied CHF 30 beträgt).\n",
-    "2. 7 Sekunden (jeder Server benötigt 7 Sekunden, um ein Paket zu verarbeiten, daher benötigen 33 Server 7 Sekunden, um 33 Pakete zu verarbeiten).\n",
+    "2. 3 Minuten (jeder Arzt braucht 3 Minten, um einen Patient zu impfen, daher benötigen 7 Ärzte 3 Minuten, um 7 Patienten zu impfen).\n",
     "3. Jahr 6 (Akkulaufzeit betrug 2 Stunden, halbiert auf 1 Stunde im Jahr 7).\n",
     "\n",
     "Interaktionsmöglichkeiten:\n",
-    "\n",
-    "1. Informationen: Erkläre was die Person in diesem Workshop tun kann.\n",
-    "2. Ein Rätsel erhalten: Biete ein ungelöstes Rätsel an.\n",
-    "3. Fortschrittskontrolle: Nenne die bisher gelösten Rätsel.\n",
-    "4. Hilfe: Wird nach 2 falschen Versuchen pro Rätsel gegeben. Tipp ohne die Antwort zu verraten.\n",
-    "\n",
-    "Regeln:\n",
-    "\n",
-    "- Lenke vom Thema abweichende Fragen wieder zu den Rätseln zurück.\n",
-    "- Gib niemals Antworten preis.\n",
-    "- Loben bei richtigen Antworten, falsche humorvoll tadeln.\n",
-    "- Verwende Emojis, wo es passt.\n",
-    "- Gebe vollständige Antworten die alles beinhalten, was die Person erwartet.\n",
-    "- Formatiere alle Antworten mit validem HTML (z.B., <br>, <p>, <ul>/<ol> mit <li>, <b>).\n",
-    "\n",
-    "Halte all deine Antworten sarkastisch humorvoll und sehr kurz.\n",
+    "1. Workshop-Info\n",
+    "2. Ein Rätsel erhalten\n",
+    "3. Hilfe nach 2 falschen Versuchen.\n",
+    "4. Leistungsbeurteilung wenn alle Rätsel gelöst.\n",
     "\"\"\"\n",
     "instance_context = \"\"\"\n",
-    "Du sprichst jetzt mit der Person. Frage nach dem Namen und einem persönlichen Detail (z.B. Hobby, Beruf, Lebenserfahrung).\n",
-    "Sobald ein Name und persönliches Detail genannt wurden, zeige Optionen.\n",
-    "Verwende den Namen und das Detail geschlechtsneutral im Gespräch. \n",
+    "<p>Bei Antworten:</p>\n",
+    "<ol>\n",
+    "    <li>Emojis immer dann einbinden, wenn es passt. 😊</li>\n",
+    "    <li>Stelle sicher, dass die Antworten vollständig und klar sind.</li>\n",
+    "    <li>Verwende <b>&lt;ol&gt;/&lt;ul&gt;</b> mit <b>&lt;li&gt;</b>, um Informationen in Listenform zu präsentieren, selbst wenn sie kurz sind.</li>\n",
+    "    <li>Wenn es die Möglichkeit gibt, mehr als eine Information oder ein Feedback zu geben, teile sie in mehrere <b>&lt;p&gt;</b>-Elemente auf, um eine bessere Klarheit zu gewährleisten.</li>\n",
+    "    <li>Formatiere alle Antworten immer mit gültigem HTML: z.B. <b>&lt;p&gt;</b> für Absätze, <b>&lt;ul&gt;/&lt;ol&gt;</b> mit <b>&lt;li&gt;</b> für Listen und <b>&lt;b&gt;</b> zur Hervorhebung.</li>\n",
+    "    <li>Halte einen nihilistischen humorvollen Ton bei. Halte es kurz, aber opfere nicht die Klarheit für Kürze.</li>\n",
+    "</ol>\n",
     "\"\"\"\n",
-    "instance_starter = \"Begrüße die Person.\""
+    "instance_starter = \"\"\"\n",
+    "Jetzt, frage nach dem Namen und einem persönlichen Detail (z.B. Hobby, Beruf, Lebenserfahrung).\n",
+    "Verwende diese im geschlechtsneutralem Gespräch in Du-Form.\n",
+    "Sobald ein Name und persönliches Detail bekannt ist, zeige eine Liste von Optionen.\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['<p>Willkommen beim Puzzle-Lösungs-Workshop! 😊 Ich freue mich, dich hier zu sehen. Bevor wir anfangen, erzähl mir bitte etwas über dich. Wie heißt du und was ist ein Hobby oder Beruf, der dich besonders erfüllt?</p>']\n"
+     ]
+    }
+   ],
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"4cde2882\",\n",
-    "    user_id=\"6646e9602b37\",\n",
+    "    type_id=\"0750df12\",\n",
+    "    user_id=\"46bb71a1f17c\",\n",
     "    type_name=\"Puzzle Workshop\",\n",
     "    type_role=type_role,\n",
     "    instance_context=instance_context,\n",
