bug fixes in notebook

--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -195,7 +195,7 @@
     "error_c = 0 # counter for failed requests, don't change\n",
     "for user_id in user_ids:\n",
     "    bot = Chatbot(\n",
-    "        database_file=\"data/chatbot.db\", \n",
+    "        database_file=\"database/chatbot.db\", \n",
     "        type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
     "        user_id=user_id,\n",
     "        instance_context=Chatbot.default_instance_context,\n",
@@ -203,7 +203,7 @@
     "    )\n",
     "    try:\n",
     "        # each bot should have a first message to the user\n",
-    "        print(bot.starter())\n",
+    "        print(bot.start())\n",
     "    except:\n",
     "        error_c += 1\n",
     "        continue\n",
@@ -230,7 +230,7 @@
     "pythonanywhere_username = \"<ENTER YOUR PYTHONANYWHERE USERNAME HERE>\"\n",
     "type_id = \"4b9e7b25-08d7-4031-b485-4741ecd48dd1\"\n",
     "bot = Chatbot(\n",
-    "    database_file=\"data/chatbot.db\", \n",
+    "    database_file=\"database/chatbot.db\", \n",
     "    type_id=type_id,\n",
     "    user_id=user_ids[0]\n",
     ")\n",
@@ -389,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
