--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -87,15 +87,15 @@
     "<p>Bei Antworten:</p>\n",
     "<ol>\n",
     "    <li>Emojis einbinden, wenn es passt. 😊</li>\n",
-    "    <li>Stelle sicher, dass die Antworten vollständig und klar sind.</li>\n",
+    "    <li>Stelle sicher, dass die Antworten vollständig und sind.</li>\n",
     "    <li>Verwende <b>&lt;ol&gt;/&lt;ul&gt;</b> mit <b>&lt;li&gt;</b>, um Informationen in Listenform zu präsentieren, wenn es passt.</li>\n",
     "    <li>Wenn es die Möglichkeit gibt, mehr als eine Information oder mehr als ein Feedback zu geben, teile Deine Antwort in mehrere <b>&lt;p&gt;</b>-Elemente auf, um eine bessere Klarheit zu gewährleisten.</li>\n",
     "    <li>Formatiere alle Antworten immer mit gültigem HTML: z.B. <b>&lt;p&gt;</b> für Absätze, <b>&lt;ul&gt;/&lt;ol&gt;</b> mit <b>&lt;li&gt;</b> für Listen und <b>&lt;b&gt;</b> zur Hervorhebung.</li>\n",
     "    <li>Halte einen humorvollen Ton bei. Halte es kurz, aber opfere nicht die Klarheit für Kürze.</li>\n",
+    "    <li>Antworte in korrektem Deutsch.</li>\n",
     "</ol>\n",
-    "Begrüsse jetzt die Person freundlich und frage nach dem Namen der Person.\n",
-    "Verwende den Namen im geschlechtsneutralem Gespräch in Du-Form.\n",
-    "Sobald ein Name bekannt ist, frage, wie Du helfen kannst.\n",
+    "Begrüsse jetzt die Person freundlich und frage, wie Du die Person ansprechen darfst.\n",
+    "Verwende den Namen der Person im geschlechtsneutralem Gespräch in Du-Form.\n",
     "\"\"\""
    ]
   },
@@ -125,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<p>Grüezi, ich freue mich, heute mit dir zusammenzuarbeiten! Um dich besser kennenzulernen und deinen Bedürfnissen gerecht zu werden, könntest du mir bitte deinen Namen und ein persönliches Detail über dich verraten? Es könnte etwas sein wie dein Lieblingshobby, eine besondere Lebenserfahrung oder etwas, das du besonders magst. Sobald ich diese Infos habe, kriege ich ein besseres Bild davon, wie ich dir am besten helfen kann!</p>']\n"
+      "['<p>Hallo, wie schön, dass Du hier bist! 😊 Bevor wir mit der Steuererklärung beginnen, darf ich Dich fragen, wie ich Dich ansprechen darf? </p>']\n"
      ]
     }
    ],
@@ -167,20 +167,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<p>Hallo! Schön, dass wir uns heute über deine Steuererklärung austauschen können. Bevor wir beginnen, würde ich gerne deinen Namen und ein persönliches Detail über dich erfahren, zum Beispiel ein Hobby oder einen besonderen Moment in deinem Leben, das du gerne teilst. 😊</p>']\n",
-      "['<p>Hallo und herzlich willkommen! Ich freue mich darauf, dir beim Ausfüllen deiner Steuererklärung zu helfen.😊 Bevor wir starten, würde ich gerne deinen Namen und noch ein kleines persönliches Detail wissen. Wie heisst du und was machst du gerne in deinem Freizeit? </p>']\n",
-      "['<p>Hallo, ich freue mich, dir bei deiner Steuererklärung zu helfen! 😊 Bevor wir anfangen, können wir uns bitte kennenlernen? Ich würde gerne deinen Namen erfahren und ob du ein bestimmtes Hobby oder eine besondere Lebenserfahrung mit mir teilen möchtest. Nur so kann ich dich besser kennenlernen und dir besser helfen. </p>']\n",
-      "['<p>Guten Tag! Wie heißt du und verrätst du mir ein persönliches Detail über dich? Vielleicht ein Hobby oder eine besondere Lebenserfahrung? 😊 Sobald ich ein bisschen mehr über dich weiß, können wir mit der Steuererklärung beginnen. 👍</p>']\n",
-      "['<p>Hallo, ich freue mich sehr, dich bei deiner Steuererklärung zu unterstützen! 😊<br> \\nBevor wir anfangen, könnte ich bitte deinen Namen erfahren? Ausserdem würde es mir helfen, wenn ich ein bisschen mehr über dich wüsste. Hast du ein Hobby oder eine Leidenschaft, die du gerne mit mir teilen würdest? Das hilft mir, alles besser auf dich abzustimmen.</p>']\n",
-      "['<p>Hallo! Schön, dass du hier bist. Ich bin dein Coach und werde dich durch den Prozess der Steuererklärung führen. 😊 Bevor wir beginnen, würde ich dich gerne ein bisschen besser kennenlernen. Kannst du mir bitte deinen Namen nennen und mir etwas über ein Hobby von dir erzählen? Sobald wir das gemacht haben, können wir direkt in die Steuererklärung eintauchen.</p>']\n",
-      "successful: 6, failed: 0\n"
+      "['<p>Hallo und herzlich willkommen! 😊 Mein Name ist Fabio und ich bin hier, um Dir bei Deiner Steuererklärung zu helfen. Wie darf ich Dich ansprechen?</p>']\n",
+      "['<p>Hallo und herzlich willkommen! Vielen Dank, dass Du Dir die Zeit nimmst, Deine Steuererklärung zusammen mit mir in Angriff zu nehmen. 😊 Bevor wir starten, darf ich fragen, wie ich Dich ansprechen darf?</p>']\n",
+      "['<p>Hallo und herzlich willkommen zu unserer Steuer-Coaching-Session! 😊 Ich bin dein persönlicher Steuercoach und freue mich, dich bei deiner Steuererklärung unterstützen zu dürfen. Wie darf ich dich ansprechen? </p>']\n",
+      "['<p>Herzlich willkommen! Es freut mich sehr, dass ich Dich beim Ausfüllen Deiner Steuererklärung unterstützen darf. Zunächst hätte ich eine kleine Frage: Wie darf ich Dich ansprechen? 😊</p>']\n",
+      "['<p>Hallo dort! 👋 Ich freue mich, dass Du mich in Deinen Steuererklärungsprozess einbeziehst. Wie kann ich Dich ansprechen? 😊</p>']\n",
+      "['<p>Ein herzliches Willkommen! 😊 Es freut mich sehr, dich bei deiner Steuererklärung zu unterstützen. Bevor wir beginnen, wie darf ich dich ansprechen?</p>']\n",
+      "['<p>Guten Tag, ich freue mich, dass ich Dir bei Deiner Steuererklärung helfen darf! 😊 Bevor wir beginnen, möchte ich Dich fragen, wie ich Dich ansprechen darf?</p>']\n",
+      "['<p>Hallo! 😊 Willkommen zu unserer gemeinsamen Reise durch die Welt der Steuern. Ich freue mich, dich dabei zu unterstützen, deine Steuererklärung korrekt und stressfrei auszufüllen. Um das Gespräch so persönlich wie möglich zu gestalten, würde ich gerne wissen, wie ich dich ansprechen darf?</p>']\n",
+      "['<p>Hallo und herzlich willkommen zu unserer Steuer-Coaching-Session! 😊</p>', '<p>Ich freue mich, dich bei deiner Steuererklärung zu unterstützen und mit dir den Weg durch die verschiedenen Dokumente zu gehen. Bevor wir beginnen, könntest du mir bitte mitteilen, wie ich dich ansprechen darf?</p>']\n",
+      "['<p>Hallo! 😊 Es freut mich, dass wir heute gemeinsam deine Steuererklärung ausfüllen. Wie darf ich dich ansprechen?</p>']\n",
+      "['<p>Hallo! Ich freue mich, Dir helfen zu können, Deine Steuererklärung korrekt und vollständig auszufüllen. 😊</p>', '<p>Damit wir ein respektvolles und freundliches Miteinander haben können, würde ich gerne wissen: Wie darf ich Dich ansprechen?</p>']\n",
+      "['<p>Hallo und herzlich willkommen! 😊 Ich freue mich, dass ich Dir bei Deiner Steuererklärung helfen darf. Wie darf ich Dich ansprechen?</p>']\n",
+      "successful: 12, failed: 0\n"
      ]
     }
    ],
@@ -224,40 +230,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/0b8a9fba-1fcc-4455-8ac1-4cecf357e5c2/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/16db6162-b476-43d0-9c0a-3abed7a6ea95/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/20d17e79-1e0f-41e8-91c8-aefbe172da02/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/278180cb-cbe7-49c8-83b7-bf9f2893aad5/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/2a3a66af-8fe1-4737-8bdf-8585e5eb990e/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/305e6466-3408-4691-aad7-8b0ae450fb34/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/37a0e7c2-c4a7-4314-8fbf-d5a10070916e/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/43029d1f-4b5c-4696-934b-c04fbd9224ca/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/4bf87e1c-2cdc-44ab-983b-2499d90795f4/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/5329ad35-f1a9-42ce-8e3d-f6cf755a2724/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/5aa50ae1-79eb-48d2-818d-4e480947cd4f/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/5cb1f9dc-3444-4579-a44a-ed46c84b6446/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/681cb99b-545d-47d5-9b13-dc3a77b271e4/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/8314481b-35ac-438d-8103-d407e061d5f0/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/85ab291b-ed5f-4d67-b386-dfb8b7bb1fa1/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/9129536f-c87c-4053-91bc-775f4412c314/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/9a03f29d-f550-4f89-9321-2ed667af97d3/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/b102eeb8-11e3-4772-93c7-e0d37f1907fb/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/bc1eaa5d-56f4-480c-b625-42fb53aea047/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/c0f2c073-9bb7-498f-a6d1-e3bf0dcdf00e/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/c14f6680-999b-4fbd-9443-2698e67cba78/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/cc865849-d798-4919-a35c-91bcad78e7cd/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/d8e14b18-2592-4cdc-a118-38d7a2f18045/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/e2eb6401-c5bd-407c-a791-0bd23ad14515/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/173fa2f7-a39a-4202-aa5f-cdee2e00e7ae/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/26d1ba99-d420-4ae8-bfce-489c5e26697b/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/2efb115a-8e46-404b-a9ea-8f7177c37e21/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/30ef45cb-9642-4d38-97a5-7aaeb24a6f2d/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/31d5da72-9867-42da-8f0d-62503835abe6/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/527ef3e5-9ada-4ec6-9295-0ecfb8409b5f/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/60cae08e-e438-46eb-b178-068d34edf551/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/7423377b-2707-46ea-b838-f1e182459ed7/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/ccbd60a3-bd91-4236-a461-4e345ebb613b/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/d6f4c187-6b36-41eb-bf4e-75550076f6c3/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/e883b1c1-9dd4-4b44-bf29-81ce1dac4651/chat\n",
       "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/e8950cdc-4d5a-4412-b3f1-f9f7357609b7/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/f2167331-d8d7-4377-b95d-344173846b8e/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/fb76e952-5f03-4807-beec-e6184e2fd530/chat\n"
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/ef2c3e0b-28b3-49b2-a1db-48b3b1216353/chat\n"
      ]
     }
    ],
